--- a/VoiceR.csproj
+++ b/VoiceR.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.8.250916003" />
     <PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.26100.4654" />
+    <PackageReference Include="System.Windows.Extensions" Version="10.0.1" />
   </ItemGroup>
 
   <ItemGroup>
