--- a/VoiceR.csproj
+++ b/VoiceR.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="System.Windows.Extensions" Version="10.0.1" />
     <PackageReference Include="Whisper.net" Version="1.9.0" />
     <PackageReference Include="Whisper.net.Runtime" Version="1.9.0" />
+    <PackageReference Include="YamlDotNet" Version="16.2.1" />
   </ItemGroup>
 
   <ItemGroup>
